@startuml
skinparam classAttributeIconSize 0
abstract class Shape {
    - string label
    - double x
    - double y
    + Shape(xmlNode)
    {abstract} + virtual void draw(...)
    + virtual string dump(...)
}

class Circle {
    - double r
    - string color
    + Circle(xmlNode)
    + draw(...) override
    + string dump(...) override
}
Shape <|-- Circle

class Group {
    + Group(xmlNode)
    + draw(...) override
    + string dump(...) override
}
Shape "*" <--* Group : children <
Shape <|-- Group

class Drawing {
    + draw(...) override
}
Group <--* Drawing : root <
class SFML_output {
    + SFML_output();
    + void draw_circle(...);
    + void display(drawing);
}
@enduml
